--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -2,6 +2,7 @@ version: "3"
 services:
   web:
     build:
+      context: ./back
       dockerfile: ./back/Dockerfile
     command: sh -c "python manage.py makemigrations --noinput &&
       python manage.py migrate --noinput &&
@@ -27,6 +28,7 @@ services:
       retries: 5
   daphne:
     build:
+      context: ./back
       dockerfile: ./back/Dockerfile
     command: daphne -b 0.0.0.0 -p 8089 geosight.asgi:application
     restart: always
