--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -90,6 +90,8 @@ services:
       - martin
       - daphne
   celery:
+    build:
+      context: ./back
     command: celery -A geosight.celery worker -l info -E -Q ${QUEUE_DEFAULT}  -c 10
     volumes:
       - ./back/:/var/www/geosight
