--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,8 @@ version: "3"
 services:
   web:
     build:
-      dockerfile: ./back/Dockerfile
+      context: ./back
+      dockerfile: ./Dockerfile
     command: sh -c "python manage.py makemigrations --noinput &&
       python manage.py migrate --noinput &&
       python manage.py collectstatic --noinput &&
@@ -27,7 +28,8 @@ services:
       retries: 5
   daphne:
     build:
-      dockerfile: ./back/Dockerfile
+      context: ./back
+      dockerfile: ./Dockerfile
     command: daphne -b 0.0.0.0 -p 8089 geosight.asgi:application
     restart: always
     ports:
@@ -54,7 +56,7 @@ services:
     image: postgis/postgis:latest
     volumes:
       - postgres_osm_data:/var/lib/postgresql/data
-      - ./scripts/init-osm-extensions.sql:/docker-entrypoint-initdb.d
+      - ./scripts/init-osm-extensions.sql:/docker-entrypoint-initdb.d/init-osm-extensions.sql
       - ./osm_backup.dump:/osm_backup.dump
     environment:
       POSTGRES_DB: osm-data
@@ -90,6 +92,8 @@ services:
       - martin
       - daphne
   celery:
+    build:
+      context: ./back
     command: celery -A geosight.celery worker -l info -E -Q ${QUEUE_DEFAULT}  -c 10
     volumes:
       - ./back/:/var/www/geosight
