--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -1,6 +1,6 @@
 version: "3"
 services:
-  web:
+  web_dev:
     build:
       context: ./back
       dockerfile: ./Dockerfile
@@ -26,7 +26,7 @@ services:
       interval: 30s
       timeout: 10s
       retries: 5
-  daphne:
+  daphne_dev:
     build:
       context: ./back
       dockerfile: ./Dockerfile
@@ -42,7 +42,7 @@ services:
     depends_on:
       web:
         condition: service_healthy
-  db:
+  db_dev:
     image: postgis/postgis:latest
     volumes:
       - postgres_data:/var/lib/postgresql/data
@@ -52,7 +52,7 @@ services:
       POSTGRES_PASSWORD: ${DB_PASSWORD}
     ports:
       - 5433:5432
-  osm_db:
+  osm_db_dev:
     image: postgis/postgis:latest
     volumes:
       - postgres_osm_data:/var/lib/postgresql/data
@@ -64,7 +64,7 @@ services:
       POSTGRES_PASSWORD: ${DB_PASSWORD_OSM}
     ports:
       - 5434:5433
-  martin:
+  martin_dev:
     image: maplibre/martin:latest
     restart: always
     environment:
@@ -74,7 +74,7 @@ services:
     depends_on:
       web:
         condition: service_healthy
-  nginx:
+  nginx_dev:
     image: nginx
     env_file:
       - .env
@@ -89,7 +89,7 @@ services:
       - web
       - martin
       - daphne
-  celery:
+  celery_dev:
     build:
       context: ./back
     command: celery -A geosight.celery worker -l info -E -Q ${QUEUE_DEFAULT}  -c 10
@@ -100,7 +100,7 @@ services:
     depends_on:
       - redis
       - web
-  redis:
+  redis_dev:
     image: redis:latest
     restart: always
     ports:
