--- a/nginx/nginx.dev.conf
+++ b/nginx/nginx.dev.conf
@@ -11,15 +11,15 @@ http {
     client_max_body_size 20M;
 
     upstream django_proj {
-        server web:8000;
+        server web_dev:8000;
     }
 
     upstream daphne {
-        server daphne:8089;
+        server daphne_dev:8089;
 }
 
     upstream martin_proj {
-        server martin:3000;
+        server martin_dev:3000;
     }
 
     server {
