--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -108,6 +108,11 @@ services:
     ports:
       - 6381:6379
 
+networks:
+  default:
+    external:
+      name: geosight_prod_default
+
 volumes:
   postgres_data:
   postgres_osm_data:
