--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -25,6 +25,11 @@ http {
     server {
         server_name app.geosight.ru;
 
+         # Добавьте секцию для обработки .well-known/acme-challenge/
+        location ^~ /.well-known/acme-challenge/ {
+            root /var/www/geosight;  # Замените на путь к корневому каталогу вашего веб-сайта
+        }
+
         location /static/ {
             alias /var/www/geosight/static/;
         }
