--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -54,12 +54,23 @@ http {
             proxy_set_header X-Forwarded-Proto $scheme;
         }
 
-        location / {
-            add_header 'Access-Control-Allow-Origin' '*';
+        location /admin/ {
             proxy_pass http://django_proj;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header Host $host;
             proxy_redirect off;
+        }
+
+        location /api/ {
+            proxy_pass http://django_proj;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header Host $host;
+            proxy_redirect off;
+        }
+
+        location / {
+            root /var/www/geosight/front;
+            try_files $uri /index.html;
         }
     }
 }
