--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -80,8 +80,8 @@ services:
       - .env
     volumes:
       - ./nginx/nginx.conf:/etc/nginx/nginx.conf
-      - ./back/static/:/var/www/geosight/static
-      - ./front/build/static/:/var/www/geosight/static
+#      - ./back/static/:/var/www/geosight/static
+#      - ./front/build/static/:/var/www/geosight/static
       - ./front/build/:/var/www/geosight/front
       - media_data:/var/www/geosight/media
       - ./nginx/nginx.sh:/nginx.sh
