--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -69,7 +69,7 @@ http {
         }
 
         location / {
-            root /var/www/geosight/front;
+            root /var/www/geosight/front/build;
             try_files $uri /index.html;
         }
     }
