--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -29,6 +29,31 @@ http {
             alias /var/www/geosight/static/;
         }
 
+        location /static/admin/ {
+            alias  /var/www/geosight/static/admin/;
+            expires  7d;
+        }
+         location /static/rest_framework/ {
+            alias  /var/www/geosight/static/rest_framework/;
+            expires  7d;
+        }
+
+        location /static/jazzmin/ {
+            alias  /var/www/geosight/static/jazzmin/;
+            expires  7d;
+        }
+
+        location /static/vendor/ {
+            alias  /var/www/geosight/static/vendor/;
+            expires  7d;
+        }
+
+        location /static/ {
+            alias  /var/www/geosight/front/static/;
+            expires  7d;
+        }
+
+
         location /media/ {
             alias /var/www/geosight/media/;
             autoindex on;
@@ -69,7 +94,7 @@ http {
         }
 
         location / {
-            root /var/www/geosight/front/build;
+            root /var/www/geosight/front/;
             try_files $uri /index.html;
         }
     }
