--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -75,7 +75,9 @@ services:
       web:
         condition: service_healthy
   nginx:
-    image: nginx
+    build:
+      context: ./nginx
+      dockerfile: ./Dockerfile
     env_file:
       - .env
     volumes:
@@ -84,8 +86,6 @@ services:
       - ./front/build/:/var/www/geosight/front
       - media_data:/var/www/geosight/media
       - ./nginx/nginx.sh:/nginx.sh
-    command: sh -c "RUN chmod +x /nginx.sh && /bin/sh /nginx.sh"
-    restart: always
     ports:
       - 80:80
       - 443:443
@@ -93,6 +93,7 @@ services:
       - web
       - martin
       - daphne
+    entrypoint: [ "/nginx.sh" ]
   celery:
     build:
       context: ./back
