--- a/nginx/Dockerfile
+++ b/nginx/Dockerfile
@@ -1,16 +1,19 @@
 FROM nginx:latest
 
+# Установка необходимых пакетов
 RUN apt-get update && \
     apt-get install -y certbot python3-certbot-nginx wget lsof dnsutils
 
-RUN mkdir -p /etc/letsencrypt
-
-RUN wget https://raw.githubusercontent.com/certbot/certbot/master/certbot-nginx/certbot_nginx/_internal/tls_configs/options-ssl-nginx.conf -O /etc/letsencrypt/options-ssl-nginx.conf && \
-    wget https://raw.githubusercontent.com/certbot/certbot/master/certbot/certbot/ssl-dhparams.pem -O /etc/letsencrypt/ssl-dhparams.pem
-
+# Копирование конфигурационных файлов и скриптов
 COPY ./nginx.conf /etc/nginx/nginx.conf
-COPY ./nginx.sh /nginx.sh
 
-RUN chmod +x /nginx.sh
+# Копирование скрипта для получения сертификатов
+COPY ./init-letsencrypt.sh /init-letsencrypt.sh
+RUN chmod +x /init-letsencrypt.sh
 
-ENTRYPOINT ["/nginx.sh"]
+# Установка переменных окружения для Certbot
+ENV EMAIL=geosight@email.com
+ENV DOMAIN=app.geosight.ru
+
+# Запуск скрипта и nginx
+CMD ["/bin/bash", "-c", "/init-letsencrypt.sh && nginx -g 'daemon off;'"]
