--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -80,6 +80,7 @@ services:
       - ./back/static/:/var/www/geosight/static
       - ./front/build/:/var/www/geosight/front
       - media_data:/var/www/geosight/media
+      - ./nginx/nginx.conf:/etc/nginx/nginx.conf
     ports:
       - 80:80
       - 443:443
