--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -96,7 +96,7 @@ http {
     }
 
     server {
-        listen: 80;
+        listen 80;
 
         location /static/admin/ {
             alias  /var/www/geosight/static/admin/;
